fix: broken alignment of close button icon

--- a/src/viewer/shared/ZoomableGroup.module.scss
+++ b/src/viewer/shared/ZoomableGroup.module.scss
@@ -14,7 +14,7 @@
   cursor: pointer;
 
   display: flex;
-  align-content: center;
+  align-items: center;
   justify-content: center;
 
   background-color: white;
